Fix flexbox bug on Safari. 1 1 0% -> 1

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -9,7 +9,7 @@
 }
 
 .flex-column{
-        flex: 1 1 0%;
+        flex: 1;//1 1 0%;
    max-width: 100%;
   /*max-height: 0%; firefox will has strange UI for 0% */
   box-sizing: border-box;
